[project]
name = "net-enforcement"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Cam", email = "cammclain@skiff.com"},
]
dependencies = [
    "rich>=13.7.1",
    "python-telegram-bot>=21.4",
    "keras>=3.4.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
